# csdl_dafoam

./: .gitignore  README.md  airfoil_rom_dataset_generation.py  airfoil_rom_testscript.py  airfoil_runscript.py  airfoil_runscript_mpi.py  bwb_helper_functions.py  bwb_rom_dataset_generation.py  bwb_runscript.py  connection_visualization.py  csdl_dafoam.py  csdl_grassmann.py  csdl_test_functions.py  custom_explicit_reduced_svd.py  dual_consistency_test.py  geometry_export_script.py  geometry_visualization.py  helper_functions.py  pyproject.toml  rom_training_helper_functions.py  stp_export.py
console_output_analysis/: console_output_cleaner.sh  console_output_cleaner_original.sh
csdl_dafoam/core/: csdl_dafoam.py  csdl_idwarp.py
csdl_dafoam/core/rom/: csdl_dafoam_rom.py  csdl_grassmann.py
csdl_dafoam/scripts/airfoil/: airfoil_rom_dataset_generation.py  airfoil_rom_fom.py  airfoil_rom_testscript.py  airfoil_runscript.py  airfoil_runscript_mpi.py
csdl_dafoam/scripts/blended_wing_body/: bwb_helper_functions.py  bwb_rom_dataset_generation.py  bwb_runscript.py
csdl_dafoam/scripts/toy_problems/: simple_implicit_component.py  simple_runscript.py
csdl_dafoam/utils/: check_headless.oldpy  csdl_test_functions.py  runscript_helper_functions.py  standard_atmosphere_model.py  training_interface.py
