[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csdl_dafoam"
version = "0.1.0"
description = "Python interface for CSDL and DAFoam integration with ROM tools"
authors = [{name = "Ed", email = "ejlowell@ucsd.edu"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["numpy", "scipy", "matplotlib"]
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
